k8s-on-premise-cloud/OPA-GateKeeper/argocd/K8sAllowedRepos-Constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: argo-allowed-repos
spec:
  match:
    kinds:
      - apiGroups: ["argoproj.io"]
        kinds: ["Application"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["argocd"]
  parameters:
    repos:
      - "https://gitlab.com/movie-web-manifest/"
  validationFailureAction: enforce
